# krestiki_noliki

./: CMakeLists.txt  README.md
src/: game.cpp  game.hpp
